SKIF-CPLANE: add model market
